Update 3. Running a Robot.md

--- a/3. Running a Robot.md
+++ b/3. Running a Robot.md
@@ -28,7 +28,8 @@ This can be summed up in the following analogy. You are in a room (ROS Master) w
 
 ### 1. Install Robot
 
-Let's attempt to install a virtual industrial robot from Clearpath Robotics. Firstly, enter the following commands in a new terminal (if you are on a computer simply click on the clipboard to the right of the code box, after hovering over it, to copy the contents). **Use a lowercase 'y' to accept the installs** when asked in the terminals.
+Let's attempt to install a virtual industrial robot from Clearpath Robotics. Firstly, enter the following commands in a new terminal (**if you are on a computer simply click on the clipboard to the right of the code box, after hovering over the box, to copy the contents**). 
+
 
 ```
 sudo apt-get update
@@ -58,30 +59,30 @@ In front of you is the Gazebo program with a robot spawned into an empty world. 
 
 In Gazebo, you have a few different things that you can do.
 
-1) You can navigate the 3D view port by using the mouse as shown in the following picture:
+* You can navigate the 3D view port by using the mouse as shown in the following picture:
 
 ![gazebomouse](Robot_images/gazebomouse.png)
 
 *Sourced from http://gazebosim.org/hotkeys.html*
 
-2) You should be able to see a bar ontop of the 3D viewport in Gazebo, as shown below. Each of these icons have different roles and a corresponding keyboard shortcut, which is further described below (from left to right).
+* You should be able to see a bar ontop of the 3D viewport in Gazebo, as shown below. Each of these icons have different roles and a corresponding keyboard shortcut, which is further described below (from left to right).
 ![Gazebo top bar](Robot_images/Gazebo_top_bar.PNG)
-    * Selection mode icon (shaped as a mouse) allows you to select objects and move the screen. It's shortcut is **Esc**.
-    * Translation Mode icon (cross shaped) allows you to move the object. It's shortcut is **T**.
-    * Rotation Mode icon allows you to rotate the object. It's shortcut is **R**.
-    * Scale Mode icon allows you to scale the object. It's shortcut is **S**.
-    * The next two icons are the undo and redo buttons.
-    * The following three icons are to insert objects should you wish to do so.
-    * The Next three icons give you 3 ways to change the lighting. 
-    * The two icons that follow this are the 'copy' and 'paste' options.
-    * Next is the align tool that allows you to select 2 object you want to be aligned with each other.
-    * Then the Snap mode icon.
-    * The following cube icon is the perception tool this enabling you to view the port from any side and to view the objects in either perspective mode or orthographic mode.
-    * The last four options enables you to take a screenshot (picture of the world), log results, plot data and record a video of the simulation (mp4 option included).
+1. Selection mode icon (shaped as a mouse) allows you to select objects and move the screen. It's shortcut is **Esc**.
+2. Translation Mode icon (cross shaped) allows you to move the object. It's shortcut is **T**.
+3. Rotation Mode icon allows you to rotate the object. It's shortcut is **R**.
+4. Scale Mode icon allows you to scale the object. It's shortcut is **S**.
+5. The next two icons are the undo and redo buttons.
+6. The following three icons are to insert objects should you wish to do so.
+7. The Next three icons give you 3 ways to change the lighting. 
+8. The two icons that follow this are the 'copy' and 'paste' options.
+9. Next is the align tool that allows you to select 2 object you want to be aligned with each other.
+10. Then the Snap mode icon.
+11. The following cube icon is the perception tool this enabling you to view the port from any side and to view the objects in either perspective mode or orthographic mode.
+12. The last four options enables you to take a screenshot (picture of the world), log results, plot data and record a video of the simulation (mp4 option included).
     
-    Some of the keyboard shortcuts to change mode have been identified above, however there is a more complete list at **Help** > **Hotkey Chart** in the Gazebo program. 
+   Some of the keyboard shortcuts to change mode have been identified above, however there is a more complete list at **Help** > **Hotkey Chart** in the Gazebo program. 
 
-3) In Gazebo, you can insert different objects from a given library. In the left hand pane, navigate the mouse to 'insert' and underneath you will see links to stores that have an array of models that you can insert
+* In Gazebo, you can insert different objects from a given library. In the left hand pane, navigate the mouse to 'insert' and underneath you will see links to stores that have an array of models that you can insert
 
 ![insert models](Robot_images/insert_models.png)
 
