Update 3. Running a Robot.md

--- a/3. Running a Robot.md
+++ b/3. Running a Robot.md
@@ -87,7 +87,7 @@ In Gazebo, you have a few different things that you can do.
 ![insert models](Robot_images/insert_models.png)
 
 ### 4. Move the Robot with Software
-In a new a terminal, type the following command:
+Copy and paste the following lines in a new a terminal:
 
 ```
 rostopic pub /husky_velocity_controller/cmd_vel geometry_msgs/Twist "linear:
