--- a/4. Folder structure.md
+++ b/4. Folder structure.md
@@ -78,7 +78,7 @@ At this point, you will be able to see that two more folders have appeared in yo
 
 Github is a common platform for software developers. It allows for one to upload and share code easily. Many developers and institutions use github to share their work and it is highly likely that this will be the place whereby you will be downloading robots and robot packages. Usually, the University of Manchester 
 
-To do this, you will need to install git tools first on your linux. Enter the following commands:
+To do this, you will need to install git tools first on your linux. Enter the following commands in a new terminal:
 ```
 sudo apt-get install git
 ```
