Update 4. Folder structure.md

--- a/4. Folder structure.md
+++ b/4. Folder structure.md
@@ -47,7 +47,7 @@ mkdir ~/workspace
 ```
 *The mkdir command is to create a folder, the ~ sign is a shortcut to the home folder in linux and therefore the /workspace is the path you are wanting to create.*
 
-![mkdir.png](mkdir.png)
+![mkdir.png](Folder_structure_pics/mkdir.png)
 
 
 If you open your home folder you should be able to see a folder titled "workspace".
@@ -68,7 +68,7 @@ catkin_init_workspace
 
 *The cd command stands for change directory. In other words it is pointing the terminal towards the folder titled "src". The command catkin_init_workspace initialises the workspaces and adds a CMake.txt file.*
 
-![catkin_init.png](catkin_init.png)
+![catkin_init.png](Folder_structure_pics/catkin_init.png)
 
 At this point, you will be able to see that two more folders have appeared in your Workspace folder: the build and devel folders.
 
@@ -103,6 +103,7 @@ git clone https://github.com/jackal/jackal_simulator.git
 
 At this point, if you look in your files, you would realise that the folders are all in the repository named "jackal" and "jackal_simulator" stored in the source folder of the workspace.
 
+![jack_files.png](Folder_structure_pics/jack_files.png)
 
 ## 3) Building the workspace
 
