Update 4. Folder structure.md

--- a/4. Folder structure.md
+++ b/4. Folder structure.md
@@ -16,19 +16,15 @@ On the left hand side of your Linux desktop, you will see a file cabinet icon. C
 
 So far, we have been downloading packages from the internet using the **sudo apt install** command. But where have they been stored? If you look into the downloads folder you will not see them there. If you click on ***Other Locations*** on the left hand side and search for the packages you donwloaded earlier (such as husky_desktop) you will find that there are two main where they are stored:
 
-The path that they are stored can be seen as follows:
-
-ie it is at the system ros directory - you shouldn't be editing packages here.
+The path that they are stored, is at the system ros directory - you shouldn't be editing packages here.
 
 Ultimately, a simulated robot is a bunch of packages - so how should you take a package and edit/modify it? To do this you need to create your own Catkin Workspace. 
 
+*We will be using the words **folders** and **directories** interchangeably. As well as, **"catkin package"** and **"package"** interchangeably*
+
 **Catkin Workspace:** a directory (or folder) where you can modify existing catkin packages or create new ones and connect packages together. It will contain at least three main subdirectories (sub-folders): build, devel and src subdirectories.
 
-*We will be using the words **folders** and **directories** interchangeably*
-
-**Catkin Package:** building up from our definition of a package from the previous tutorial, a catkin package is a folder that at least has a "CMakeLists.txt" file and a "package.xml" file. 
-
-*We will be using the word **catkin package** and **package** interchangeably*
+**Catkin Package:** building up from our definition of a package from the previous tutorial, a catkin package is a folder that at least has a "CMakeLists.txt" file and a "package.xml" file.
 
 **Note: you can have multiple catkin packages in a single catkin workspace.**
 
@@ -45,18 +41,17 @@ Open a terminal and enter the following commands:
 ```
 mkdir ~/workspace
 ```
-*The mkdir command is to create a folder, the ~ sign is a shortcut to the home folder in linux and therefore the /workspace is the path you are wanting to create.*
+*The mkdir command is to create a folder, the ~ sign is a shortcut to the **"home"** folder in linux and therefore the /workspace is the path you are wanting to create.* 
 
 ![mkdir.png](Folder_structure_pics/mkdir.png)
 
 
-If you open your home folder you should be able to see a folder titled "workspace".
+If you open your **"home"** folder you should be able to see a folder titled **"workspace"**.
 
 Enter the following command:
 ```
 mkdir ~/workspace/src
 ```
-*The **~/** at the beginning of the path represents the home folder.*
 
 If you click into the workspace folder you will now see that you have created a folder titled "src".
 
@@ -65,7 +60,6 @@ Enter the following two commands:
 cd ~/workspace/src
 catkin_init_workspace
 ```
-
 *The cd command stands for change directory. In other words it is pointing the terminal towards the folder titled "src". The command catkin_init_workspace initialises the workspaces and adds a CMake.txt file.*
 
 ![catkin_init.png](Folder_structure_pics/catkin_init.png)
@@ -86,7 +80,7 @@ Next we find either a repository (folder with a bunch of packages) or generally 
 
 https://github.com/jackal/jackal
 
-If you click in each folder - such as the jackal_control - you will see that they have a CMakeLists.txt file and a package.xml. This means that the jackal_control folder is a package as it has the .xml and CMakeLists file.
+If you click in each folder - such as the jackal_control - you will see that they have a CMakeLists.txt file and a package.xml. This means that the jackal_control folder is a **package** as it has the .xml and CMakeLists file.
 
 If we wish to copy the whole jackal robot repository (ie all the packages found at that address) and edit it, then we need to take it into the src folder of the catkin workspace. We will use the same workspace created above. Open a new terminal and enter the following commands:
 
@@ -115,7 +109,7 @@ From the same terminal, enter the following command:
 cd ..
 catkin_make
 ```
-*The **cd ..** command is used to return the terminal to the folder that is the level above; ie the terminal is now pointing to the path **~/workspace** where before we entered the command it was at the path **~/workspace/src**. The command **catkin_build** is sometimes used to build the workspace - the University of Manchester ROS repositories also use catkin_build now.*
+*The **"cd .."** command is used to return the terminal to the folder that is the level above; ie the terminal is now pointing to the path **~/workspace** where before we entered the command it was at the path **~/workspace/src**. The command **catkin_build** is sometimes used to build the workspace - the University of Manchester ROS repositories also use catkin_build now.*
 
 
 
