Update 4. Folder structure.md

--- a/4. Folder structure.md
+++ b/4. Folder structure.md
@@ -53,14 +53,14 @@ Enter the following command:
 mkdir ~/workspace/src
 ```
 
-If you click into the workspace folder you will now see that you have created a folder titled "src".
+If you double click on the **workspace** folder you will now see that you have created a folder titled **"src"**.
 
 Enter the following two commands:
 ```
 cd ~/workspace/src
 catkin_init_workspace
 ```
-*The cd command stands for change directory. In other words it is pointing the terminal towards the folder titled "src". The command catkin_init_workspace initialises the workspaces and adds a CMake.txt file.*
+*The **"cd"** command stands for change directory. In other words it is pointing the terminal towards the **src** folder. The command **"catkin_init_workspace"** initialises the workspaces and adds a **"CMake.txt"** file in the **src** folder.*
 
 ![catkin_init.png](Folder_structure_pics/catkin_init.png)
 
