VirtualBox guide update

--- a/1. Installing Linux.md
+++ b/1. Installing Linux.md
@@ -90,8 +90,13 @@ sudo apt update && sudo apt upgrade
 * You may encounter an error stating: **"unable to acquire the dpkg frontend lock (/var/lib/dpkg/lock-frontend), is another process using it?"**. If this error depicted comes up there are a few possible options to try, this link goes through each of them: https://itsfoss.com/could-not-get-lock-error/. Though it is likely you will just need to wait a while for background updates to complete.
 
 
-## Installation via virtual simulation
-If preparing a bootable disk and running it on your PC is too much of a hassle, then you could, alternatively, run via a virtual simulation on your PC. To do this, you will need to download a virtual machine emulator such as **VMware**.
+## Installation via virtual machine
+If preparing a bootable disk and running it on your PC is too much of a hassle, then you could, alternatively, run Linux via a virtualisation on your PC. To do this, you will need to download a virtual machine such as **VMware**.
+
+*Note: if you are unable to use VMWare because you use an IT managed PC/Laptop and have to
+use VirtualBox, follow the [**Installing VirtualBox guide** in this
+repo](Installing%20VirtualBox.md). We **strongly** recommend not using VirtualBox if you
+are new to virtual machines and have a choice, as it can be more challenging to correctly set up.*
 
 1) Download **Ubuntu 18.04 desktop image** by clicking the following link: http://releases.ubuntu.com/18.04/ and selecting the appropriate desktop version for your PC. This will download a .iso file onto your PC.
 2) Download **VMware Workstation Player** from the following link: https://www.vmware.com/uk/products/workstation-player.html p.s. You want to download the suitable one for your current OS. For example the **windows VM** for a **windows OS**.
