Fixed broken image and added further reading to Folder structure

--- a/4. Folder structure.md
+++ b/4. Folder structure.md
@@ -166,3 +166,7 @@ catkin build
 
 *Because you ran the command* `catkin init` *earlier you can call* `catkin build` *from any directory. If you skipped this step earlier you may get an error here.*
 
+## Further Reading
+* [Catkin tools read the docs page](https://catkin-tools.readthedocs.io/en/latest/)
+  *Further information about catkin tools commands, including a cheatsheet and
+  quick start guide*
