--- a/5. Essential Files.md
+++ b/5. Essential Files.md
@@ -1,3 +1,7 @@
+_Disclaimer: Many links to external sites, such as youtube and other online guides, will be used. These were not created by the creators of this guide._
+
+**This is part 5 of a 5 part series going through the installation and application of Linux and the robotic operating system(ROS). These documents were created by Toluwani Soboyejo, Abdu-Allah Awad and Jessica Paterson. If you find mistakes in the documents please let us know so changes can be made.**
+
 # Beginner: Understanding Files
 
 Aims:
@@ -112,16 +116,16 @@ To practice writing your own node for the jackal, follow the tutorial on the fol
 
 ## URDF files
 
-URDF stands for Universal Robot Description Format. It describes the robot's physical description and is referred to in some launch files. If you are browsing through robot repositories, you are sure to encounter them. More advanced tutorial on how to 
+URDF stands for Universal Robot Description Format. It describes the robot's physical description to ROS 
 
 
 
 ## Further resources to learn more  about ROS:
-Now that you are familiar with the basics of how to use the terminal and navigate, you are ready to revist some concepts and get into the more advanced stuff. It is advisable that you refer back to 
 
 ### Textbooks:
 * ROS Robotics by Example 
 *Note that this is for ROS Kintic and so not all of the commands may be up to date. Nonetheless the concepts are well explained*
+* 
 
-### Websites:
-* ROS Wiki Tutorial
+
+
