Update 4. Folder structure.md

--- a/4. Folder structure.md
+++ b/4. Folder structure.md
@@ -69,11 +69,11 @@ Enter the following command:
 mkdir ~/workspace/src
 ```
 
-This creates a folder called src in your workspace folder.
+This creates a folder called **src** in your workspace folder.
 
-Enter the following two commands:
+Enter the following command:
 ```
-cd ~/workspace/src
+cd ~/workspace
 ```
 *The **"cd"** command stands for change directory. In other words it is pointing the terminal towards the **src** folder.*
 
