Update 4. Folder structure.md

--- a/4. Folder structure.md
+++ b/4. Folder structure.md
@@ -69,13 +69,13 @@ Enter the following command:
 mkdir ~/workspace/src
 ```
 
-This creates a folder called **src** in your workspace folder.
+This creates a folder called `src` in your workspace folder.
 
 Enter the following command:
 ```
 cd ~/workspace
 ```
-*The **"cd"** command stands for change directory. In other words it is pointing the terminal towards the **src** folder.*
+*The `cd` command stands for change directory. In other words it is pointing the terminal towards the `src` folder.*
 
 ### What is catkin?
 
@@ -101,7 +101,7 @@ If we want to build a package we use the command:
 catkin build
 ```
 
-Even though there aren't any packages in the **src** folder yet, run this command now. It will still work. At this point, you will be able to see that two more folders have appeared in your Workspace folder: the build and devel folders (sometimes a log folder is created as well). If you run:
+Even though there aren't any packages in the `src` folder yet, run this command now. It will still work. At this point, you will be able to see that two more folders have appeared in your Workspace folder: the build and devel folders (sometimes a log folder is created as well). If you run:
 
 ```
 ls -a
@@ -114,7 +114,7 @@ You should see the output:
 ```
 .  ..  build  .catkin_workspace  devel  src
 ```
-*On Unix systems you always have two hidden folders **.** and **..**, they stand for the current directory and the directory one level up respectively. For example, if you want to change directory to the one above you could type* `cd ..`
+*On Unix systems you always have two hidden folders `.` and `..`, they stand for the current directory and the directory one level up respectively. For example, if you want to change directory to the one above you could type* `cd ..`
 
 ## 2) Adding your packages
 
@@ -150,7 +150,7 @@ Let's add another repository as well:
 git clone https://github.com/jackal/jackal_simulator.git
 ```
 
-At this point, if you look in your files, you would realise that the folders are all in the repository named "jackal" and "jackal_simulator" stored in the source folder of the workspace.
+At this point, if you look in your files, you would realise that the folders are all in the repository named `jackal` and `jackal_simulator` stored in the source folder of the workspace.
 
 ![jack_files.png](Folder_structure_pics/jack_files.png)
 
