Update 4. Folder structure.md

--- a/4. Folder structure.md
+++ b/4. Folder structure.md
@@ -77,6 +77,8 @@ cd ~/workspace
 ```
 *The `cd` command stands for change directory. In other words it is pointing the terminal towards the `src` folder.*
 
+**Warning: Make sure you use this directory you have changed to above `workspace` for the following section. If you initialise catkin (in the next steps) in the incorrect folder it will give you an error we dont know how to fix yet.**
+
 ### What is catkin?
 
 Before we create a package it is important to understand a little bit about what catkin is. Catkin is the custom build system for ROS. A build system is responsible for taking your raw non-static code (e.g. C++ files) and turning them into a usable format, for example executable programs. Popular build systems include CMake and GNU Make. Essentially Catkin extends CMake and makes it easier to use for ROS, which is why you will see files called CMakeLists.txt in your workspace.
