--- a/5. Essential Files.md
+++ b/5. Essential Files.md
@@ -28,16 +28,18 @@ Then enter:
 ls
 ```
 You should see the all of the folders and files that are included in that src folder listed in the terminal. 
-*Using the **ls** command is a quick way viewing the files where the terminal is pointing towards. This is a good alternative to opening the folders using your mouse - when you have mutliple folders nested in folders it would be much quicker to just view the list of files from the terminal.*
+*Using the **ls** command is a quick way viewing the files where the terminal is pointing towards. This is a good alternative to opening the folders using your mouse - when you have mutliple folders nested in folders it would be much quicker to view the list of files from the terminal. This was done in the previous guide as well*
 
-{insert image of the }
+![file view](Essential_files_pics/file_view)
 
-enter
+Now enter:
 ```
 cd jackal
 ls -l
 ```
-You will see the list of the folders and files that are now within the jackal repository - this time listed vertically. You will also realise that the folders are highlighted in blue - you can then direct the terminal path into the folder listed by typing the command **cd [folder_name]**
+You will see the list of folders and files that are within the jackal repository - listed vertically due to the addition of `-l`. The folders are indicated in blue - you can direct the terminal path into the folder listed by typing the command **cd [folder_name]**. For example `cd jackal_control`.
+
+![list view](Essential_files_pics/list_view)
 
 *Remember the jackal is a repository with packages within it. The repository is placed in the src folder of the workspace.* 
 
@@ -47,8 +49,6 @@ After you have built your workspace with all of the packages included, you will 
 
 1) Source the workspace (you do this for every new terminal you open that you want run the packages from)
 2) Find the launch file you want to use
-
-
 
 ### 1) Sourcing the workspace
 
@@ -78,6 +78,7 @@ rosnode list
 ```
 You will now see listed all the nodes that the launch file created from the package. Remember that nodes are either publishers or subscribers.
 
+![Nodes list](Essential_files_pics/Nodes_list)
 
 We know a launch file is used an needed to start up a ROS Master and run multiple nodes (**Reminder** a node is simply an executable file within a package the either acts as a subscriber or a publisher). 
 
@@ -91,8 +92,7 @@ gedit spawn_jackal.launch
 
 You will see code written in HTML format. To better understand how launch files work and how you use them once you have written a node, follow this link:
 
-
-
+![text_editor](Essential_files_pics/text_editor)
 
 ## Creating packages and nodes
 
