Update 5. Essential Files.md

--- a/5. Essential Files.md
+++ b/5. Essential Files.md
@@ -30,7 +30,7 @@ ls
 You should see the all of the folders and files that are included in that src folder listed in the terminal. 
 *Using the **ls** command is a quick way viewing the files where the terminal is pointing towards. This is a good alternative to opening the folders using your mouse - when you have mutliple folders nested in folders it would be much quicker to view the list of files from the terminal. This was done in the previous guide as well*
 
-![file view](Essential_files_pics/file_view)
+![file view](Essential_files_pics/file_view.PNG)
 
 Now enter:
 ```
@@ -39,7 +39,7 @@ ls -l
 ```
 You will see the list of folders and files that are within the jackal repository - listed vertically due to the addition of `-l`. The folders are indicated in blue - you can direct the terminal path into the folder listed by typing the command **cd [folder_name]**. For example `cd jackal_control`.
 
-![list view](Essential_files_pics/list_view)
+![list view](Essential_files_pics/list_view.PNG)
 
 *Remember the jackal is a repository with packages within it. The repository is placed in the src folder of the workspace.* 
 
@@ -78,7 +78,7 @@ rosnode list
 ```
 You will now see listed all the nodes that the launch file created from the package. Remember that nodes are either publishers or subscribers.
 
-![Nodes list](Essential_files_pics/Nodes_list)
+![Nodes list](Essential_files_pics/Nodes_list.PNG)
 
 We know a launch file is used an needed to start up a ROS Master and run multiple nodes (**Reminder** a node is simply an executable file within a package the either acts as a subscriber or a publisher). 
 
@@ -92,7 +92,7 @@ gedit spawn_jackal.launch
 
 You will see code written in HTML format. To better understand how launch files work and how you use them once you have written a node, follow this link:
 
-![text_editor](Essential_files_pics/text_editor)
+![text_editor](Essential_files_pics/text_editor.PNG)
 
 ## Creating packages and nodes
 
