Update 5. Essential Files.md

--- a/5. Essential Files.md
+++ b/5. Essential Files.md
@@ -116,14 +116,17 @@ To practice writing your own node for the jackal, follow the tutorial on the fol
 
 ## URDF files
 
-URDF stands for Universal Robot Description Format. It describes the robot's physical description to ROS 
+URDF stands for Universal Robot Description Format. It describes the robot's physical description to ROS. you can find the URDF of the jackal robot by the following command:
+```
+
 
 
 
 ## Further resources to learn more  about ROS:
 
 ### Textbooks:
-* ROS Robotics by Example 
+* ROS Robotics by Example
+ 
 *Note that this is for ROS Kintic and so not all of the commands may be up to date. Nonetheless the concepts are well explained*
 * 
 
