--- a/5. Essential Files.md
+++ b/5. Essential Files.md
@@ -98,13 +98,19 @@ You will see code written in HTML format. To better understand how launch files 
 
 You may want to create your own package.
 
+To do this, you would use the **catkin_create_pkg** command that has the following format:
+```
+catkin_create_pkg [package_name] [dependency 1] [dependency 2] [dependency 3]
+```
+
 Using the workspace, you would open a terminal and enter the following commands:
 
 ```
 cd ~/workspace/src
-catkin_create_pkg [package_name] [dependecy 1] [dependency 2] [dependency 3]
+catkin_create_pkg package_101 roscpp std_msgs
 ```
-*The command catkin_create_pkg creates the package and the moving_forwards details the name of the package while both roscpp and std_msgs are the dependencies of the package.*
+
+*The command **catkin_create_pkg** creates the package and the **package_101** details the name of the package. **roscpp** and **std_msgs** details the dependencies.*
 
 Dependency here refers to ROS specific software packages that are needed to build the package in the previous line of code we had **roscpp** and **std_msgs** as dependencies - ie the package we are creating is dependent on the **roscpp** software package (special packages in the ROS system directory)and the std_msg software package to write the code of our nodes.
 
@@ -116,18 +122,26 @@ To practice writing your own node for the jackal, follow the tutorial on the fol
 
 ## URDF files
 
-URDF stands for Universal Robot Description Format. It describes the robot's physical description to ROS. you can find the URDF of the jackal robot by the following command:
+URDF stands for Universal Robot Description Format. It describes the robot's physical description to ROS. You can find the URDF files relating to the jackal robot by searching the workspace for urdf or by the following pathway in the terminal:
 ```
+cd ~/workspace/src/jackal/jackal_description/urdf
+ls
+```
+If you open one of the files (either by using **gedit** command on terminal or by double clicking the file with your mouse) you will likely see something similar to this:
 
 
 
 
 ## Further resources to learn more  about ROS:
 
+### Websites:
+
+
+
 ### Textbooks:
 * ROS Robotics by Example
  
-*Note that this is for ROS Kintic and so not all of the commands may be up to date. Nonetheless the concepts are well explained*
+*Note that this is for ROS Kintic and so not all of the commands may be up to date. Nonetheless the concepts are well explained.*
 * 
 
 
