Update 5. Essential Files.md

--- a/5. Essential Files.md
+++ b/5. Essential Files.md
@@ -90,7 +90,7 @@ gedit spawn_jackal.launch
 ```
 *The **gedit** command is used to open up the file in a text editor*
 
-You will see code written in HTML format. To better understand how launch files work and how you use them once you have written a node, follow this link:
+You will see code written in HTML format:
 
 ![text_editor](Essential_files_pics/text_editor.PNG)
 
@@ -129,13 +129,19 @@ ls
 ```
 If you open one of the files (either by using **gedit** command on terminal or by double clicking the file with your mouse) you will likely see something similar to this:
 
+![urdf](Essential_files_pics/urdf.PNG)
 
-
+As you can see, the file is written in HTML format like the launch files.
 
 ## Further resources to learn more  about ROS:
 
 ### Websites:
+* ROS Wiki Tutorials: http://wiki.ros.org/ROS/Tutorials
 
+*These are the official tutorials from the ROS Wiki. From this point forward, it is advisable to start the beginner tutorial onwards to revist some concepts discussed in this tutorial but in greater detail.*
+
+* 
+ 
 
 
 ### Textbooks:
