Update 5. Essential Files.md

--- a/5. Essential Files.md
+++ b/5. Essential Files.md
@@ -59,6 +59,8 @@ source ~/workspace/devel/setup.bash
 
 ```
 
+You will have to **source the workspace for every new terminal** if you wish to run content from the workspace.
+
 ### 2) Launch files
 
 A launch file is used start up a ROS Master and run multiple nodes (**Reminder** a node is simply an executable file within a package). To use the terminal and do something with your packages, you will need to find the launch files associated with it. Not all packages will necessarily have launch files. Nonethless, you will usually find in the instructions of the package/description what the name of the launch file is that will simulate the robot.
