Update 5. Essential Files.md

--- a/5. Essential Files.md
+++ b/5. Essential Files.md
@@ -137,20 +137,27 @@ As you can see, the file is written in HTML format like the launch files.
 
 ## Further resources to learn more  about ROS:
 
-### Websites:
-* ROS Wiki Tutorials: http://wiki.ros.org/ROS/Tutorials
+## Further Resources and Tutorials
 
-*These are the official tutorials from the ROS Wiki. From this point forward, it is advisable to start the beginner tutorial onwards to revist some concepts discussed in this tutorial but in greater detail.*
+Now that you have a basic understanding of how to use Linux and ROS, you are better prepared to follow some further tutorials that will build up on your foundations.
 
-* 
+### ROS Wiki Tutorials: 
+
+Link:  http://wiki.ros.org/ROS/Tutorials
+
+These are the official tutorials from the ROS Wiki. From this point forward, it is advisable to start the beginner tutorial onwards to revist some concepts discussed in this tutorial and to it. As it is the official site, it is kept up to date and comprehensively details ROS.
+
+### ROS Robot Programming - Fiarchild and Harman 
+
+Link: https://drive.google.com/open?id=1H48MY7bUYBnqQ-orHN9U2pBoo43jAd8e
+
+This includes both a free ebook as well as a free video course. It is advisable for those who want to delve into a much more comprehensive explanation of ROS concepts.
+
+### ROS Robotics by Example Second Edition
  
+**Note that this is for ROS Kinetic and so some of the commands may bit be up to date.** 
+The contents of this book is led by examples and hence makes it practical for those who want to start creating straight away.
 
-
-### Textbooks:
-* ROS Robotics by Example
- 
-*Note that this is for ROS Kintic and so not all of the commands may be up to date. Nonetheless the concepts are well explained.*
-* 
 
 
 
