--- a/1. Installing Linux.md
+++ b/1. Installing Linux.md
@@ -1,20 +1,39 @@
-*Disclaimer: Many links to external sites, such as youtube and other online guides, will be used. These were not created by the creators of this guide.*
+*Disclaimer: Many links to external sites, such as YouTube and other online guides, will be used. These were not created by the creators of this guide.*
 
-**This is part 1 of a 5 part series going through the installation and application of Linux and the robotic operating system(ROS). These documents were created by Toluwani Soboyejo, Abdu-Allah Awad and Jessica Paterson. If you find mistakes in the documents please let us know so changes can be made.**
+**This is part 1 of a 5 part series going through the installation and application of
+Linux and the robotic operating system (ROS). These documents were created by Toluwani Soboyejo, Abdu-Allah Awad and Jessica Paterson. If you find mistakes in the documents please let us know so changes can be made.**
 
 # Installing Linux
 In this guide we will be going through how to install and run Linux Ubuntu 18.04 in 3 ways. 
 
-1) Via **dual boot** on your Personal computer(PC) - this is where you would install the Linux operating system(OS), such that it runs the Linux OS as well as your own OS. You can switch between the operating systems at reboot.
-2) Via **full installation** on your PC - this is where you would install the Linux OS as the **only** operating system running on your PC. **Warning: this will wipe out all exiting OS, programs, files etc...**
-3) Via a **virtual machine(VM)** running on your PC - here you would download VM software that emulates the Linux environment. You can also download VM's that have both Linux and the Robotic operating system(ROS) installed. 
+1) Via **dual boot** on your Personal computer (PC) - this is where you install the
+Linux operating system (OS), such that it runs the Linux OS as well as your own Windows
+Installation. You can switch between the operating systems at reboot.
 
-On the surface this may seem like an easy task but there are a lot of issues that you may face along the way. We will highlight some of the issues we encountered and offer solutions, so you dont have to go through the stress that unknown errors bring. Further help will be provided at the end of this guide to make using the installed linux an easy process. **p.s. Ubuntu 18.04 is required to run ROS melodic, So be careful not to install the shiny new version of Ubuntu as you will have issues running ROS melodic.**
+2) Via **full installation** on your PC - this is where you install the Linux OS as the
+**only** operating system running on your PC. **Warning: this will wipe out all exiting
+OS, programs, files etc...**
+
+3) Via a **virtual machine (VM)** running on your PC - here you download software that
+emulates the Linux environment. You can also download VM's that have both Linux and the
+Robotic operating system (ROS) pre-installed although that is not provided by this guide. 
+
+On the surface this may seem like an easy task but there are a lot of issues that you may
+face along the way. We will highlight some of the issues we encountered and offer
+solutions, so you don't have to go through the stress that unknown errors bring. Further
+help will be provided at the end of this guide to make using the installed Linux an easy
+process. **p.s. Ubuntu 18.04 is required to run ROS melodic, So be careful not to install
+the shiny new version of Ubuntu, as you will have issues running ROS melodic.**
 
 ## Options 1 & 2 (Installation via dual boot / Full installation)
-**It is advisable to make backup copies of all of your important files before proceeding with the download and installation of Linux OS. This could be done by creating a system restore point (search google for instructions) or by saving important files onto a USB, Google drive, or another form of your choosing.**
+**It is advisable to make backup copies of all of your important files before proceeding
+with the download and installation of Linux OS. If you intend to dual boot you could
+accidentally wipe/corrupt your Windows installation so make sure you save your files
+onto a USB hard drive, Google drive, or another form of your choosing. It is possible to
+clone your entire Windows installation onto an external drive, but that is beyond the scope of
+this guide.**
 
-To use either of these methosd you will need:
+To use either of these methods you will need:
 1) Your PC.
 2) A USB stick with a minimum storage of 4 GB (Check on USB or through PC).
 3) A bootable software, we personally recommend **Rufus** - follow this [Rufus install](https://rufus.ie/en/) link and select the latest stable version to download.
@@ -22,9 +41,28 @@ To use either of these methosd you will need:
 ![Rufus_download](Linux_guide_pics/Rufus_download.PNG)
 
 ### Preparing the bootable USB Stick
-To use the USB as a medium to install linux, the USB must first be made bootable. This process is described below. **Warning:** The contents of your USB will be deleted, so make sure it is empty or you have a backup of it's content.
-1. Download Ubuntu 18.04 **desktop image** by clicking the following link: http://releases.ubuntu.com/18.04/ and selecting the appropriate **desktop version** for your PC. This will download a **.iso file** onto your PC.
+To use the USB as a medium to install Linux, the USB must first be made bootable. This process is described below.
+
+**Warning:** The contents of your USB will be deleted, so make sure it is empty or you have a backup of it's content.
+
+1. Download Ubuntu 18.04 **desktop image**:
+  * For 64-bit computers go to http://releases.ubuntu.com/18.04/ and download the
+    ubuntu-18.04.6-desktop-amd64.iso aka the 64-bit PC (AMD64) desktop image.
+    *AMD in this context does not refer to your processor manufacturer, so even if
+    you have an Intel processor, you still require the AMD64 image.*
+
     ![Ubuntu_desktop_image](Linux_guide_pics/Ubuntu_desktop_image.PNG)
+
+  * For 32-bit PCs go to https://cdimage.ubuntu.com/ubuntu-mate/releases/18.04/release/
+    and download the ubuntu-mate-18.04.5-desktop-i386.iso aka 32-bit PC (i386) desktop
+    image. *This image is for any 32-bit processor, Intel or AMD.* Ubuntu Mate is
+    identical to Ubuntu in all the ways that matter but it looks very different to the
+    screenshots of Ubuntu you will find in this guide.
+  
+    If you are not sure whether you have a 32-bit or 64-bit machine please search how to
+    check this in your version of Windows. On Windows 10 this information can be found by
+    clicking the Start button -> Settings (Gear Icon above the power icon) -> System -> About
+
 2. Plug in your USB drive and open the Rufus software
 3. Make sure that the following is selected for each section:
     * Under **Device**, select your **USB drive**.
@@ -38,25 +76,29 @@ To use the USB as a medium to install linux, the USB must first be made bootable
 
 Once completed, you will have a bootable USB drive that you can use to run and install Linux.
 
-
 ### Booting from the USB 
 To install the Linux operating system, you will need to have the USB drive plugged in while booting up the PC. You will also need to know which key to press to enter the Boot Menu. Once the computer has begun to start up you will need to click that key like your life depends on it.
 
 These keys are usually either **F1**, **F2**, **F10**, **F12** or **Del**. If you don't know the key you may be able to find out by googling **BIOS key for [*input your computer model*]**. Or just try each of the ones we mentioned at least once.
 
 If your PC isn't taking you to the Boot Menu even though you are pressing the correct keys - this could be due to your PC starting up too quickly. Here are a few methods to get around this:
-1) Firstly, the easiest method is to click **restart** (on the desktop start menu) while holding the **shift key**. This will take you to a menu entitled **Choose an option** where you will need to press **Troubleshoot** > **Advanced options** > **UEFI Firmware Settings** and proceed to restart. This will automatically reboot the system into the BIOS/ UEFI. This is the first tip described in this video: https://youtu.be/yPLvBo5UCv0 - *thankfully u only need to watch the first minute*.
+1) Firstly, the easiest method is to click **restart** (on the desktop start menu) while
+holding the **shift key**. This will take you to a menu entitled **Choose an option**
+where you will need to press **Troubleshoot** > **Advanced options** > **UEFI Firmware
+Settings** and proceed to restart. This will automatically reboot the system into the
+BIOS/ UEFI. This is the first tip described in this video: https://youtu.be/yPLvBo5UCv0 -
+*thankfully you only need to watch the first minute*.
 
     ![Choose_option](Linux_guide_pics/Choose_option.png)
 
-3) Alternatively, if u wish to try frantically pressing a key again, you can stop "fast start-up" by navigating to your **control panel** then selecting **Hardware and Sound** > **Power Options**, then press **"choose what the power buttons do"** (located on the left section of the window), this will take you to the **System Settings**. Finally, click the **Change settings that are currently unavailable**, uncheck the **Turn on fast start-up** and click **save changes**. This should give you an opportunity to press the relevant keys to enter the Boot Menu.
+3) Alternatively, if you wish to try frantically pressing a key again, you can stop "fast start-up" by navigating to your **control panel** then selecting **Hardware and Sound** > **Power Options**, then press **"choose what the power buttons do"** (located on the left section of the window), this will take you to the **System Settings**. Finally, click the **Change settings that are currently unavailable**, uncheck the **Turn on fast start-up** and click **save changes**. This should give you an opportunity to press the relevant keys to enter the Boot Menu.
 ![Settings](Linux_guide_pics/Settings.PNG)
-5) If the above two methods have not solved the issue then the PC can be forced to go to the menu described in the first method by turning the PC off completely through holding the **power button** until loss of power. Then turn on and off again once it begins to load until the computer begins to run a **recovery process**. usually after repeating the process 3 times. **Warning: This is a last resort and it could be done a lot easier by using the first method**.
+5) If the above two methods have not solved the issue then the PC can be forced to go to the menu described in the first method by turning the PC off completely through holding the **power button** until loss of power. Then turn on and off again once it begins to load until the computer begins to run a **recovery process**. Usually after repeating the process 3 times. **Warning: This is a last resort and it could be done a lot easier by using the first method**.
 6) For those still struggling here is another video to help reach the BIOS: https://youtu.be/IMr5-mEbhTs.
 
-Once you've found yourself at the Boot Menu(in the BIOS) you will either need to move the **Boot from USB drive** to the **top of the list**, or select **USB drive**.
+Once you've found yourself at the Boot Menu (in the BIOS) you will either need to move the **Boot from USB drive** to the **top of the list**, or select **USB drive**.
 
-If the install for linux doesn't appear and the computer still runs windows, you can temporarily disable the **windows boot manager** in the BIOS, then try again.
+If the install for Linux doesn't appear and the computer still runs Windows, you can temporarily disable the **Windows boot manager** in the BIOS, then try again.
 
 ### Linux Install
 Once your PC has booted from the USB drive, you will see a purple GNU which you can use to select to boot Ubuntu.
@@ -64,7 +106,7 @@ Once your PC has booted from the USB drive, you will see a purple GNU which you 
 You will be given the option to either run Linux without installation, or to install Linux. Selecting install Linux will take you to the installation guide. You can then pick to install Linux alongside your OS or to erase your disk and install Linux (this will wipe out your current OS along with any files you have such that the only thing is Linux).
 ![Ubuntu_choice](Linux_guide_pics/Ubuntu_choice.png)
 
-**Warning:** We recommend choosing whether to run linux alongside your OS, or to erase the disk, before picking an option, as it will be extremely difficult to change your mind after the process is done. You have been warned!!
+**Warning:** We recommend choosing whether to run Linux alongside your OS, or to erase the disk, before picking an option, as it will be extremely difficult to change your mind after the process is done. You have been warned!!
 
 ### Common Issues 
 **Wi-fi not connecting:** you may find that, following installation, Ubuntu doesn't want to connect to the internet. A few solutions to this include:
@@ -87,7 +129,7 @@ repo](Installing%20VirtualBox.md). We **strongly** recommend not using VirtualBo
 are new to virtual machines and have a choice, as it can be more challenging to correctly set up.*
 
 1) Download **Ubuntu 18.04 desktop image** by clicking the following link: http://releases.ubuntu.com/18.04/ and selecting the appropriate desktop version for your PC. This will download a .iso file onto your PC.
-2) Download **VMware Workstation Player** from the following link: https://www.vmware.com/uk/products/workstation-player.html p.s. You want to download the suitable one for your current OS. For example the **windows VM** for a **windows OS**.
+2) Download **VMware Workstation Player** from the following link: https://www.vmware.com/uk/products/workstation-player.html p.s. You want to download the suitable one for your current OS. For example the **Windows VM** for a **Windows OS**.
 ![VM_download_1](Linux_guide_pics/VM_download_1.PNG)
 4) Run VMware and, once it has loaded, select **Create a New Virtual Machine**.
 5) Select **Installer disc image file (iso)** and browse for the Ubuntu desktop image then click **Next**.
@@ -98,13 +140,13 @@ You may find that the virtual disk keeps crashing due to a few issues
 * Not enough space on hard drive - remedied by freeing up space on your hard drive
 * You have an anti virus software installed that is conflicted with VMware - remedied by changing the anti virus software
 * You haven't enabled virtualisation in your Bios settings (common if you have a new computer) - reboot computer and press either the *F1*, *F2*, *F4* *Delete* or the *Esc* keys.
-* Too slow? - you may find that navigating the basic Linux interface is slow, this is often due to a lack of available RAM. You can attempt to allocate the VM more RAM by pressing **"Edit virtual machine settings"** in the VM menu (_shown in the first image below_). You will then be greeted with a slider (_shown in the second image below_) that will allow you to change the amount of allocated RAM. **However, be aware that the available RAM is limited and other processes on the computer may slow down if too much RAM is allocated to the VM.** This issue may also be due to having other processes running in the background, so you can also try closing all other windows and applications to improve speed.
+* Too slow? - you may find that navigating the basic Linux interface is slow, this is often due to a lack of available RAM. You can attempt to allocate the VM more RAM by pressing **"Edit virtual machine settings"** in the VM menu (_shown in the first image below_). You will then be greeted with a slider (_shown in the second image below_) that will allow you to change the amount of allocated RAM. **However, be aware that the available RAM is limited and other processes on the computer may slow down if too much RAM is allocated to the VM.** This issue may also be due to having other processes running in the background, so you can also try closing all other Windows and applications to improve speed.
 
     ![VM_RAM](Linux_guide_pics/VM_RAM.PNG)
     ![RAM](Linux_guide_pics/RAM.PNG)
 
 # Linux Cheat Sheet
-Upon installing Linux it may seem daunting to navigate your way around, but worry not we have provided a few handy tips, directions and advice to get you accustomed to linux as quickly as possible.
+Upon installing Linux it may seem daunting to navigate your way around, but worry not we have provided a few handy tips, directions and advice to get you accustomed to Linux as quickly as possible.
 
 ## Keyboard shortcuts
 As some may not have used Linux before we have prepared a few important key shortcuts that may come in handy:
