Update 1. Installing Linux.md

--- a/1. Installing Linux.md
+++ b/1. Installing Linux.md
@@ -26,7 +26,7 @@ On the surface this may seem like an easy task but there are a lot of issues tha
 ## Options 1 & 2 (Installation via dual boot / Full installation)
 **It is advisable to make backup copies of all of your important files before proceeding with the download and installation of Linux OS. This could be done by creating a system restore point (search google for instructions) or by saving important files onto a USB, Google drive, or another form of your choosing.**
 
-To use either of these methosd you will need:
+To use either of these methods you will need:
 1) Your PC.
 2) A USB stick with a minimum storage of 4 GB (Check on USB or through PC).
 3) A bootable software, we personally recommend **Rufus** - follow this [Rufus install](https://rufus.ie/en/) link and select the latest stable version to download.
