Update 3. Running a Robot.md

--- a/3. Running a Robot.md
+++ b/3. Running a Robot.md
@@ -19,7 +19,7 @@ To have a good understanding of how ROS works, you need to have a brief understa
 
 This can be summed up in the following analogy. You are in a room (ROS Master) with lots of other people (nodes). When you decide to speak, you will speak about a particular subject (publishing to a topic) and you will also speak in  a particular language (message type). Other people (nodes) can then decide to listen in on what you are saying (by subscribing to that topic using topic name and type) and then act upon the information.
 
-**Gazebo:**  a program that uses a physics engine engine to give an accurate simulation of robots in an environment.
+**Gazebo:**  a program that uses a physics engine to give an accurate simulation of robots in an environment.
 
 **Package:** a folder/archive that has all the files for a particular application.
 
